# mserver_rust

./: .env  Cargo.toml
src/: main.rs
src/auth/: claims.rs
src/models/: user.rs
src/utils/: merror.rs  mod.rs
