[package]
name = "api_server"
version = "0.1.0"
authors = ["sorcon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-grants = "2"
actix-web-httpauth = "0.5"
jsonwebtoken = "7"

log = "0.4"
env_logger = "0.8"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

derive_more = "0.99.13"